// Copyright 2019 The gRPC Authors

syntax = "proto3";

package grpc_csharp_distribtest.duplicate_proto;

message MessageFromDuplicateProto {
  string name = 1;
}
