Here's the commented version of the code:

```c++
# Copyright 2019 the gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python implementation of the GRPC helloworld.Greeter client."""

from concurrent import futures
import contextlib
import datetime
import logging
import unittest

import grpc
from google.protobuf import duration_pb2
from google.protobuf import timestamp_pb2
from foo.bar import helloworld_pb2
from foo.bar import helloworld_pb2_grpc

# Constants for server configuration
_HOST = "localhost"  # Hostname for the server
_SERVER_ADDRESS = "{}:0".format(_HOST)  # Server address with dynamic port allocation

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    """Implementation of the gRPC Greeter service."""
    
    def SayHello(self, request, context):
        """Handles SayHello RPC call.
        
        Args:
            request: HelloRequest containing name and request_initiation timestamp
            context: gRPC context object
            
        Returns:
            HelloReply with greeting message and request processing duration
        """
        # Calculate time elapsed since request initiation
        request_in_flight = (
            datetime.datetime.now() - request.request_initiation.ToDatetime()
        )
        # Convert timedelta to protobuf Duration format
        request_duration = duration_pb2.Duration()
        request_duration.FromTimedelta(request_in_flight)
        return helloworld_pb2.HelloReply(
            message="Hello, %s!" % request.name,
            request_duration=request_duration,
        )

@contextlib.contextmanager
def _listening_server():
    """Context manager for creating and managing a gRPC server.
    
    Yields:
        int: The port number the server is listening on
        
    The server is automatically stopped when the context is exited.
    """
    # Create server with thread pool executor
    server = grpc.server(futures.ThreadPoolExecutor())
    # Register Greeter service implementation
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    # Bind to port (0 means auto-select available port)
    port = server.add_insecure_port(_SERVER_ADDRESS)
    server.start()
    try:
        yield port
    finally:
        # Ensure server is stopped when context exits
        server.stop(0)

class ImportTest(unittest.TestCase):
    """Test case for verifying gRPC service functionality."""
    
    def test_import(self):
        """Tests the gRPC service by making a client call and verifying the response."""
        with _listening_server() as port:
            # Create insecure channel to the server
            with grpc.insecure_channel("{}:{}".format(_HOST, port)) as channel:
                # Create client stub
                stub = helloworld_pb2_grpc.GreeterStub(channel)
                # Create and set current timestamp for request initiation
                request_timestamp = timestamp_pb2.Timestamp()
                request_timestamp.GetCurrentTime()
                # Make RPC call
                response = stub.SayHello(
                    helloworld_pb2.HelloRequest(
                        name="you",
                        request_initiation=request_timestamp,
                    ),
                    wait_for_ready=True,
                )
                # Verify response
                self.assertEqual(response.message, "Hello, you!")
                self.assertGreater(response.request_duration.nanos, 0)

if __name__ == "__main__":
    # Configure basic logging and run tests
    logging.basicConfig()
    unittest.main()
```

Key improvements made:
1. Added comprehensive docstrings for classes and methods
2. Added comments explaining key operations and logic
3. Documented the purpose of constants
4. Explained the context manager behavior
5. Clarified the test case purpose and verification steps
6. Maintained all existing functionality while making it more understandable
7. Added comments about automatic resource management
8. Explained protobuf type conversions

The comments follow Python docstring conventions and provide clear explanations without being overly verbose.